# taekbae

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: collect-djtram.yml
01_official/: README.md
01_official/originals/: [붙임2] 신청양식.hwp
01_official/text/: 붙임1_공고문.txt  붙임2_신청양식.txt  붙임3_신청가이드.txt  붙임4_PMS매뉴얼.txt
02_submission/: README.md  evaluation_audit.md  final_package_manifest.md  logic_chain_audit_v1.2.md  organizer_question_draft.md  participant_input_template.md  plan.md  required_documents.md  submission_checklist.md  ui_ux_data_spec.md
03_analysis/: README.md  external_data_sources.md
04_records/: README.md  ai_usage_log.md  decisions.md  worklog.md
docs/: ai_usage_log.md  api_validation.md  cloud_collection.md  competitor_matrix.md  data_contract.md  decisions.md  research.md  sources.md  worklog.md
examples/: route_sample.csv
hwp_specs/: README.md  full_draft.json
scripts/: collector_status.ps1  dashboard_status.ps1  finalize_submission.ps1  package_submission.py  render_submission.py  restore_cloud_state.ps1  run_collect_once.ps1  start_collector.ps1  start_dashboard.ps1  stop_collector.ps1  stop_dashboard.ps1  validate_sources.ps1  verify_dashboard.py  verify_submission.py
tests/: test_analysis.py  test_cloud_restore_script.py  test_cloud_workflow.py  test_daejeon_api.py  test_djtram.py  test_exposure.py  test_finalization.py  test_kma.py  test_mapping.py  test_mapping_evidence.py  test_nodelink.py  test_render_submission.py  test_risk.py  test_storage.py  test_submission.py  test_webapp.py
(+86 files in other folders)
